For 1.20.4
	- Javascript - accessing an MFRotation from a specified SFNode gave an error - now fixed.

	- LOD changed to accept either VRML "level" or X3D "children" fields.

	- Texture files that are located, but are invalid textures, are now reported in a more user-friendly
	  way.

For 1.20.3
	- VisibilitySensors were not properly added to new internal scenegraph code, so were not working
	  reliably.

	- Routing table additions now buffered, and performed at a specific place in event loop; helped
	  a bug where an event generated routing table entries.

	- Javascript createVrmlFromString and createVrmlFromURL had problems with name-cross contamination
	  between caller and created VRML/X3D code.

	- Linux/Motif - ConsoleMessages were not printing properly when running standalone. Had extra copies
	  of data, causing increasing delays when printing lots of information. When running in HTML browser,
	  line breaks were not correct. 

	- use system fonts, if they are installed. (Linux). Check is done at build time and at run time. Look
	  for "FONTSDIR" in the code. If not found, will try the INSTALLDIR, then BUILDDIR.

	- Javascripts - evenOuts (outputOnlys) were generating an event on startup; value was "zero".
	  changed so values initialized, but not "touched", so will not generate initial events.
	  Fields will still generate an initial event, so that field values will be reflected in X3D scene
	  graph.

	- Elevation Grid colors were not working after an earlier texture change; should now
	  work. (affected other polyrep structures, too)
	- OSX plugin change to better handle Anchor to non-x3d pages when running within Safari.

	- OSX - when running non-embedded; will use default browser for html pages, rather than defaulting
	  to Safari.

	- tests  directory, tests/20.wrl changed to show material transparency affecting solid texture.

	- VRML Parser - morphing SF types into MF types (where an MF was expected, but an SF